Project Complete - Ready to Deploy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Add the executable target with main.cpp as the source file
-add_executable(mac_encryption 
+add_executable(dir-enc
     src/main.cpp 
     src/Encrypted.cpp 
     src/EncryptedIO.cpp 
