Integrate OpenSSL for encryption

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,25 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+set(OPENSSL_ROOT_DIR $ENV{OPENSSL_ROOT_DIR})
+set(OPENSSL_INCLUDE_DIR "${OPENSSL_ROOT_DIR}/include")
+set(OPENSSL_CRYPTO_LIBRARY "$ENV{OPENSSL_ROOT_DIR}/lib/VC/x64/MD/libcrypto.lib")
+set(OPENSSL_SSL_LIBRARY "$ENV{OPENSSL_ROOT_DIR}/lib/VC/x64/MD/libssl.lib")
+
+# Create imported targets manually
+add_library(OpenSSL::Crypto UNKNOWN IMPORTED)
+set_target_properties(OpenSSL::Crypto PROPERTIES
+    IMPORTED_LOCATION "${OPENSSL_CRYPTO_LIBRARY}"
+    INTERFACE_INCLUDE_DIRECTORIES "${OPENSSL_INCLUDE_DIR}"
+)
+
+add_library(OpenSSL::SSL UNKNOWN IMPORTED)
+set_target_properties(OpenSSL::SSL PROPERTIES
+    IMPORTED_LOCATION "${OPENSSL_SSL_LIBRARY}"
+    INTERFACE_INCLUDE_DIRECTORIES "${OPENSSL_INCLUDE_DIR}"
+    INTERFACE_LINK_LIBRARIES "OpenSSL::Crypto"
+)
+
 set(PROJECT_SOURCES
 
 
@@ -23,8 +42,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(AES-XEncrypt
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-        header/AesObject.h header/DirectoryDFS.h header/Encrypted.h header/mainwindow.h
-        src/AesObject.cpp src/DirectoryDFS.cpp src/Encrypted.cpp src/EncryptedAlg.cpp src/main.cpp src/mainwindow.cpp
+        header/DirectoryDFS.h header/Encrypted.h header/mainwindow.h
+        src/DirectoryDFS.cpp src/Encrypted.cpp src/EncryptedAlg.cpp src/main.cpp src/mainwindow.cpp
         ui/encrypticon.png ui/mainwindow.ui ui/resources.qrc
         header/EncryptionThread.h
     )
@@ -46,7 +65,7 @@ else()
     endif()
 endif()
 
-target_link_libraries(AES-XEncrypt PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(AES-XEncrypt PRIVATE Qt${QT_VERSION_MAJOR}::Widgets OpenSSL::SSL OpenSSL::Crypto)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
